--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "isomorphic-dompurify": "^1.12.0",
-    "next": "14.0.4",
+    "isomorphic-dompurify": "^1.13.0",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18"
   },
