--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "isomorphic-dompurify": "^1.13.0",
     "next": "^14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
